--- a/Sir.tech/MainWindow.xaml
+++ b/Sir.tech/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="Sir.tech.MainWindow"
+<Window x:Class="Sir.tech.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -8,7 +8,7 @@
         Title="Tetris" Height="600" Width="800"
         MinWidth="600" MinHeight="600"
         Foreground="White"
-        FontFamily="Segoe UI Light" FontSize="28"
+        FontFamily="/Assets/Fonts/#Press Start 2P" FontSize="28"
         KeyDown="Window_KeyDown">
 
     <Grid>
@@ -29,77 +29,416 @@
 
         <!-- Background -->
         <Grid.Background>
-            <ImageBrush ImageSource="Assets/Background.png"/>
+            <ImageBrush ImageSource="pack://application:,,,/Sir.tech;component/Assets/Background2.png"
+                        Stretch="Fill"
+                        AlignmentX="Center"
+                        AlignmentY="Center"/>
         </Grid.Background>
 
-        <!-- Score at top -->
-        <TextBlock x:Name="ScoreText"
-                   Grid.Row="0"
-                   Grid.Column="1"
-                   Text="Score: 0"
-                   Margin="0,10"
-                   TextAlignment="Center"
-                   HorizontalAlignment="Center"/>
+        <!-- SCORE display -->
+        <StackPanel Grid.Row="0"
+            Grid.Column="1"
+            Orientation="Horizontal"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Top"
+            Margin="0,10,0,0"
+            Height="40">
+
+            <!-- SCORE header image -->
+            <Image Source="pack://application:,,,/Sir.tech;component/Assets/Score.png"
+           Width="86"
+           Height="40"
+           Stretch="Uniform"
+           RenderOptions.BitmapScalingMode="NearestNeighbor"
+           VerticalAlignment="Center"
+           Margin="10,-10,50,0"/>
+            <TextBlock x:Name="ScoreText"
+               Text="0"
+               FontFamily="/Assets/Fonts/#Press Start 2P"
+               FontSize="28"
+               FontWeight="Bold"
+               Foreground="#FFF4E9"
+               Width="100"
+               TextAlignment="Left"
+               RenderOptions.ClearTypeHint="Enabled"/>
+        </StackPanel>
+
+
+
+        <StackPanel Grid.Row="1"
+            Grid.Column="1"
+            Orientation="Horizontal"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top"
+            Margin="165,135,0,0">
+            <TextBlock Text="Coins:"
+               FontSize="18"
+               FontWeight="Bold"
+               Foreground="Gold"
+               VerticalAlignment="Center"
+               FontFamily="/Assets/Fonts/#Press Start 2P"
+               Margin="-70,0,2,0"/>
+            <TextBlock x:Name="CoinText"
+               Text="0"
+               FontSize="18"
+               FontWeight="Bold"
+               Foreground="Gold"
+               HorizontalAlignment="Left"
+               FontFamily="/Assets/Fonts/#Press Start 2P"/>
+        </StackPanel>
+
+
 
         <!-- Hold section -->
-        <StackPanel Grid.Row="1"
-                    Grid.Column="0"
-                    VerticalAlignment="Center"
-                    HorizontalAlignment="Center">
-            <TextBlock Text="Hold" TextAlignment="Center"/>
+        <StackPanel
+    Grid.Column="1"
+    VerticalAlignment="Top"
+    HorizontalAlignment="Left"
+    Margin="516,29,0,0" Height="203" Grid.Row="1">
+
+            <!-- HOLD label image -->
+
+            <!-- HOLD preview block -->
+            <!-- HOLD label image -->
+
+            <!-- HOLD preview block -->
+            <!-- HOLD label image -->
+            <Image Source="pack://application:,,,/Sir.tech;component/Assets/Hold.png"
+           Width="170"
+           Height="60"
+           Stretch="Uniform"
+           RenderOptions.BitmapScalingMode="NearestNeighbor"/>
+
+            <!-- HOLD preview block -->
             <Image x:Name="HoldImage"
-                   Margin="20"
-                   Width="125"/>
+           Margin="20"
+           Width="125"
+           HorizontalAlignment="Center"/>
+        </StackPanel>
+
+
+        <!-- INPUT OVERLAY -->
+        <Canvas x:Name="InputOverlay"
+        Grid.RowSpan="2"
+        Grid.ColumnSpan="3"
+        HorizontalAlignment="Left"
+        VerticalAlignment="Top"
+        Margin="20,20,0,0"
+        IsHitTestVisible="False"
+        Panel.ZIndex="50">
+
+            <Border Background="#66000000"
+            CornerRadius="6"
+            Padding="8" Canvas.Left="90" Canvas.Top="215" HorizontalAlignment="Left" VerticalAlignment="Top">
+
+                <StackPanel Orientation="Vertical" HorizontalAlignment="Center">
+
+                    <!-- Top arrow -->
+                    <Image x:Name="UpKey"
+                       Width="30"
+                       Height="30"
+                       Source="pack://application:,,,/Sir.tech;component/Assets/UpArrow.png"
+                       Stretch="Uniform"
+                       RenderOptions.BitmapScalingMode="NearestNeighbor"
+                       Margin="2"
+                       HorizontalAlignment="Center"/>
+
+                    <!-- Bottom row: left, down, right -->
+                    <StackPanel Orientation="Horizontal"
+                HorizontalAlignment="Center">
+
+                        <Image x:Name="LeftKey"
+                       Width="30"
+                       Height="30"
+                       Source="pack://application:,,,/Sir.tech;component/Assets/LeftArrow.png"
+                       Stretch="Uniform"
+                       RenderOptions.BitmapScalingMode="NearestNeighbor"
+                       Margin="2"
+                       HorizontalAlignment="Center"/>
+
+                        <Image x:Name="DownKey"
+                       Width="30"
+                       Height="30"
+                       Margin="2"
+                       Stretch="Uniform"
+                       RenderOptions.BitmapScalingMode="NearestNeighbor"
+                       SnapsToDevicePixels="True"
+                       Source="pack://application:,,,/Sir.tech;component/Assets/DownArrow.png"
+                       HorizontalAlignment="Center"
+                       VerticalAlignment="Center"/>
+
+
+                        <Image x:Name="RightKey"
+                         Width="30"
+                         Height="30"
+                         Source="pack://application:,,,/Sir.tech;component/Assets/RightArrow.png"
+                         Stretch="Uniform"
+                         RenderOptions.BitmapScalingMode="NearestNeighbor"
+                         Margin="2"
+                         HorizontalAlignment="Center"/>
+
+                    </StackPanel>
+
+                    <!-- Spacebar -->
+                    <Image x:Name="SpaceKey"
+       Width="90"
+       Height="30"
+       Margin="4"
+       Stretch="Uniform"
+       RenderOptions.BitmapScalingMode="NearestNeighbor"
+       SnapsToDevicePixels="True"
+       HorizontalAlignment="Center"
+       VerticalAlignment="Center"
+       Source="pack://application:,,,/Sir.tech;component/Assets/SpaceBar.png"/>
+
+
+                </StackPanel>
+            </Border>
+        </Canvas>
+
+        <StackPanel
+    Grid.Column="1"
+    VerticalAlignment="Top"
+    HorizontalAlignment="Left"
+    Margin="520,242,0,0" Height="220" Width="162" Grid.Row="1">
+
+            <!-- NEXT preview block -->
+            <Image Source="pack://application:,,,/Sir.tech;component/Assets/Next.png"
+           Width="138"
+           Height="60"
+           Stretch="Uniform"
+           RenderOptions.BitmapScalingMode="NearestNeighbor"/>
+
+            <!-- NEXT preview block -->
+            <Image x:Name="NextImage"
+           Margin="20"
+           Width="125"
+           HorizontalAlignment="Center"/>
         </StackPanel>
 
         <!-- Game area -->
         <Viewbox Grid.Row="1"
-                 Grid.Column="1"
-                 Margin="0,0,0,20"
-                 HorizontalAlignment="Center">
+         Grid.Column="1"
+         Margin="0,0,0,20"
+         HorizontalAlignment="Center">
             <Canvas x:Name="GameCanvas"
-                    Background="#101010"
-                    Width="250"
-                    Height="510"
-                    ClipToBounds="True"
-                    Loaded="GameCanvas_Loaded"/>
+            Background="#101010"
+            Width="250"
+            Height="510"
+            ClipToBounds="True"
+            Loaded="GameCanvas_Loaded"/>
         </Viewbox>
 
-        <!-- Next section -->
-        <StackPanel Grid.Row="1"
-                    Grid.Column="2"
-                    VerticalAlignment="Center"
-                    HorizontalAlignment="Center">
-            <TextBlock Text="Next" TextAlignment="Center"/>
-            <Image x:Name="NextImage"
-                   Margin="20"
-                   Width="125"/>
-        </StackPanel>
+
+        <!-- Shop Button (multi-state) -->
+        <Button x:Name="ShopButton"
+        Grid.Row="1"
+        Grid.Column="1"
+        Width="180"
+        Height="100"
+        Margin="80,35,0,0"
+        Background="Transparent"
+        BorderThickness="0"
+        FocusVisualStyle="{x:Null}"
+        HorizontalAlignment="Left"
+        VerticalAlignment="Top"
+        Click="ShopButton_Click" RenderTransformOrigin="0.394,0.5">
+            <Button.Style>
+                <Style TargetType="Button">
+                    <Setter Property="Template">
+                        <Setter.Value>
+                            <ControlTemplate TargetType="Button">
+                                <!-- default image -->
+                                <Image x:Name="img"
+                               Source="/Assets/Shop.png"
+                               Stretch="Uniform"
+                               RenderOptions.BitmapScalingMode="NearestNeighbor"
+                               HorizontalAlignment="Left"
+                               VerticalAlignment="Top"/>
+                                <ControlTemplate.Triggers>
+
+                                    <!-- hover image -->
+                                    <Trigger Property="IsMouseOver" Value="True">
+                                        <Setter TargetName="img"
+                                        Property="Source"
+                                        Value="/Assets/Shop_Hover.png"/>
+                                    </Trigger>
+
+                                    <!-- pressed/click image -->
+                                    <Trigger Property="IsPressed" Value="True">
+                                        <Setter TargetName="img"
+                                        Property="Source"
+                                        Value="/Assets/Shop_Pressed.png"/>
+                                    </Trigger>
+
+                                </ControlTemplate.Triggers>
+                            </ControlTemplate>
+                        </Setter.Value>
+                    </Setter>
+                </Style>
+            </Button.Style>
+        </Button>
+
+
 
         <!-- Game Over overlay -->
         <Grid x:Name="GameOverMenu"
               Background="#CC000000"
               Grid.RowSpan="2"
               Grid.ColumnSpan="3"
-              Visibility="Hidden">
+              Visibility="Hidden"
+              Panel.ZIndex="50">
 
-            <StackPanel HorizontalAlignment="Center"
-                        VerticalAlignment="Center">
-                <TextBlock Text="Game Over"
-                           FontSize="48"
-                           TextAlignment="Center"/>
-
+            <StackPanel 
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center" Height="416">
+                <TextBlock 
+                    Text="Game Over"
+                    FontFamily="/Assets/Fonts/#Press Start 2P"
+                    TextAlignment="Center" Height="60"/>
                 <TextBlock x:Name="FinalScoreText"
-                           Text="Score: "
-                           FontSize="36"
-                           TextAlignment="Center"/>
+                        Text="Score: "
+                        FontSize="24"
+                        FontFamily="/Assets/Fonts/#Press Start 2P"   
+                        TextAlignment="Center" Height="43" Width="272"/>
 
-                <Button Content="Play Again"
-                        Background="LightGreen"
-                        Margin="0,20,0,0"
-                        Padding="5"
-                        Click="PlayAgain_Click"/>
+                <TextBlock x:Name="CoinsEarnedText"
+                        Text=""
+                        FontSize="20"
+                        FontFamily="/Assets/Fonts/#Press Start 2P"
+                        FontWeight="Bold"
+                        Foreground="Gold"
+                        Margin="0,10,0,0"
+                        HorizontalAlignment="Center"
+                        VerticalAlignment="Center"/>
+
+                <Button x:Name="PlayAgainButton"
+        Width="200"
+        Height="90"
+        Background="Transparent"
+        BorderThickness="0"
+        HorizontalAlignment="Center"
+        Margin="0,20,0,0"
+        Click="PlayAgain_Click">
+                    <Button.Template>
+                        <ControlTemplate TargetType="Button">
+                            <Grid>
+                                <Image x:Name="ButtonImage"
+                       Source="pack://application:,,,/Sir.tech;component/Assets/PlayAgain.png"
+                       Stretch="Uniform"
+                       RenderOptions.BitmapScalingMode="NearestNeighbor"/>
+                            </Grid>
+                            <ControlTemplate.Triggers>
+                                <!--Hover-->
+                                <Trigger Property="IsMouseOver" Value="True">
+                                    <Setter TargetName="ButtonImage"
+                            Property="Source"
+                            Value="pack://application:,,,/Sir.tech;component/Assets/PlayAgainHover.png"/>
+                                </Trigger>
+                                <!--Pressed-->
+                                <Trigger Property="IsPressed" Value="True">
+                                    <Setter TargetName="ButtonImage"
+                            Property="Source"
+                            Value="pack://application:,,,/Sir.tech;component/Assets/PlayAgainPressed.png"/>
+                                </Trigger>
+                            </ControlTemplate.Triggers>
+                        </ControlTemplate>
+                    </Button.Template>
+                </Button>
+
+
+
+                <Button x:Name="ShopFromGameOver"
+        Width="200"
+        Height="90"
+        Background="Transparent"
+        BorderThickness="0"
+        HorizontalAlignment="Center"
+        Margin="0,90,0,0"
+        Click="ShopFromGameOver_Click">
+                    <Button.Template>
+                        <ControlTemplate TargetType="Button">
+                            <Grid>
+                                <Image x:Name="ButtonImage"
+                       Source="pack://application:,,,/Sir.tech;component/Assets/OpenShop.png"
+                       Stretch="Uniform"
+                       RenderOptions.BitmapScalingMode="NearestNeighbor"/>
+                            </Grid>
+                            <ControlTemplate.Triggers>
+                                <!--Hover-->
+                                <Trigger Property="IsMouseOver" Value="True">
+                                    <Setter TargetName="ButtonImage"
+                            Property="Source"
+                            Value="pack://application:,,,/Sir.tech;component/Assets/OpenShopHover.png"/>
+                                </Trigger>
+                                <!--Pressed-->
+                                <Trigger Property="IsPressed" Value="True">
+                                    <Setter TargetName="ButtonImage"
+                            Property="Source"
+                            Value="pack://application:,,,/Sir.tech;component/Assets/OpenShopPressed.png"/>
+                                </Trigger>
+                            </ControlTemplate.Triggers>
+                        </ControlTemplate>
+                    </Button.Template>
+                </Button>
+
+
+
+
             </StackPanel>
+        </Grid>
+
+        <!-- SHOP OVERLAY -->
+        <Grid x:Name="ShopOverlay"
+            Visibility="Hidden"
+            Background="#CC000000"
+            HorizontalAlignment="Stretch"
+            VerticalAlignment="Stretch"
+            Grid.RowSpan="2"
+            Grid.ColumnSpan="3"
+            Panel.ZIndex="100"
+>
+
+            <Border Background="#FF1E1E1E"
+            CornerRadius="10"
+            Padding="20"
+            Width="600"
+            Height="500"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Center">
+                <StackPanel>
+
+                    <!-- Header -->
+                    <TextBlock Text="BLOCK SHOP"
+                       FontSize="26"
+                       FontWeight="Bold"
+                       Foreground="Orange"
+                       HorizontalAlignment="Center"
+                       Margin="0,0,0,10" Height="33"/>
+
+                    <!-- Coin display -->
+                    <TextBlock x:Name="ShopCoinText"
+                       Text="Coins: 0"
+                       FontSize="16"
+                       FontWeight="Bold"
+                       Foreground="Gold"
+                       HorizontalAlignment="Right"
+                       Margin="0,0,0,10" Width="60" Height="49"/>
+
+                    <!-- Scrollable block list -->
+                    <ScrollViewer VerticalScrollBarVisibility="Auto" Height="280">
+                        <StackPanel x:Name="ShopList" />
+                    </ScrollViewer>
+
+                    <!-- Close button -->
+                    <Button Content="Close"
+                    Width="100"
+                    Height="55"
+                    HorizontalAlignment="Center"
+                    Margin="0,10,0,0"
+                    Click="CloseShop_Click"/>
+                </StackPanel>
+            </Border>
         </Grid>
     </Grid>
 </Window>
